Debug cực mạnh cho controller
Debug lỗi load dữ liệu từ dtb
Code lại 1 số chỗ cho dễ hiểu